--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -21,6 +21,12 @@
 #content5-40 .mbr-article {
   color: #fff;
 }
+.cid-ts6mtTlqwv {
+  background-color: #efefef;
+}
+.cid-ts6mtTlqwv img {
+  width: auto;
+}
 #dropdown-menu-54 .hide-buttons [data-button] {
   display: none !important;
 }
@@ -101,43 +107,6 @@
 }
 #dropdown-menu-53 A {
   font-size: 16px;
-}
-#slider-31 P {
-  text-align: left;
-}
-#dropdown-menu-54 .hide-buttons [data-button] {
-  display: none !important;
-}
-#dropdown-menu-54 .nav .link,
-#dropdown-menu-54 .dropdown-item {
-  font-size: 0.8em;
-  color: #eeeeee;
-}
-#dropdown-menu-54 .navbar,
-#dropdown-menu-54 .dropdown-menu {
-  background: #3c3c3c;
-}
-#dropdown-menu-54 .dropdown-menu .dropdown-toggle[aria-expanded="true"],
-#dropdown-menu-54 .dropdown-menu a:hover,
-#dropdown-menu-54 .dropdown-menu a:focus {
-  background: #323232;
-}
-#dropdown-menu-54 .navbar-toggler {
-  color: #eeeeee;
-}
-#dropdown-menu-54 A {
-  font-size: 16px;
-}
-#content5-3v .mbr-header .mbr-header__text {
-  text-align: center;
-  color: #fff;
-}
-#content5-3v .mbr-header .mbr-header__subtext {
-  text-align: center;
-  color: #fff;
-}
-#content5-3v .mbr-article {
-  color: #fff;
 }
 #msg-box1-57 .mbr-header .mbr-header__text {
   color: #fff;
@@ -229,6 +198,12 @@
 #content5-5q .mbr-article {
   color: #000000;
 }
+.cid-ts6mjvAblp {
+  background-color: #efefef;
+}
+.cid-ts6mjvAblp img {
+  width: auto;
+}
 #dropdown-menu-5u .hide-buttons [data-button] {
   display: none !important;
 }
@@ -271,4 +246,10 @@
 }
 #content5-63 .mbr-article {
   color: #000000;
+}
+.cid-ts6aGUf4Af {
+  background-color: #efefef;
+}
+.cid-ts6aGUf4Af img {
+  width: auto;
 }
